# projeto-orcamento-consultoria

./: README.md  gerador.py  pyproject.toml
